sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: '<-' expected but ')' found.
for(i nbr-2 to 0 by -1){
                      ^AlgBubbleSort2:10: error: illegal start of simple expression
} 
^